--- a/styles/css-style.css
+++ b/styles/css-style.css
@@ -64,3 +64,48 @@ nav li {
     margin-bottom: 30px;
     
 }
+/* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+
+/* about section styles */
+.about {
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+
+}
+
+.section-title {
+    margin-bottom: 30px;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+
+.section-description {
+    margin-bottom: 30px;
+    color: #757575;
+    font-size: 18px;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about .info-title{
+    font-size: 20px;
+    color: #757575;
+}
+
+.info-description{
+    font-size: 20px;
+    font-weight: 700;
+    color: #747474;
+}
