--- a/styles/css-style.css
+++ b/styles/css-style.css
@@ -109,3 +109,77 @@ main {
     font-weight: 700;
     color: #747474;
 }
+/* what-i-do styles */
+
+.section-title{
+    margin-top: 130px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title{
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description{
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.resume .section-title{
+    margin-top: 130px;
+}
+
+/* resume styles */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+    
+}
+
+.resume .sub-title{
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 20px;
+
+}
+
+.resume .description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #757575;
+
+}
+
+.resume-button{
+    margin-top: 10px;
+    text-align: center;
+}
+
